# marketcast

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
recorder/: README.md  addmusic.js  package.json  record.js
recorder/dashboards/: Dashboard.html  DashboardGrid.html  EventDashboard.html  EventDashboardGrid.html
src/marketcast/: __init__.py  cli.py  config.py
src/marketcast/generation/: __init__.py  dashboard_copy.py  generator.py  history.py  templates.py
src/marketcast/llm/: __init__.py  chrome_identities.py  duck_capture.js  provider.py
src/marketcast/markets/: __init__.py  models.py  polymarket.py  research.py
src/marketcast/xclient/: README.md  __init__.py  accounts.py  api.py  client.py  errors.py  features.py  log.py  pacer.py  parsers.py  query_ids.py  query_ids_cache.json  reader.py  telemetry.py  transaction.py  writer.py
tests/: conftest.py  test_generation_helpers.py  test_history.py  test_markets.py  test_xclient_parsers.py
