[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketcast"
version = "0.1.0"
description = "Turn live Polymarket prediction-market data into AI-written viral X posts with recorded dashboard videos."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sixsechszes-666" }]
keywords = ["polymarket", "twitter", "x", "llm", "content-automation", "playwright"]

dependencies = [
    "curl_cffi>=0.7",
    "requests>=2.31",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.scripts]
marketcast = "marketcast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/marketcast"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
